<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cinema_bg">

    <ImageView
        android:id="@+id/movie_poster_detail"
        android:layout_width="190dp"
        android:layout_height="186dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loading" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="341dp"
        android:layout_height="321dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_poster_detail">

        <TextView
            android:id="@+id/movie_title_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:textColor="@color/textcolor_detail"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_original_title_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_original_title"
            android:textColor="@color/textcolor_detail"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/movie_voteA_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/movie_average_vote"
            android:textColor="@color/textcolor_detail"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/movie_overview_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/movie_overview"
            android:textColor="@color/textcolor_detail"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/movie_release_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/movie_release_date"
            android:textColor="@color/textcolor_detail"
            android:textSize="13sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>